<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4adcce">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lableVolume"
        android:id="@+id/textView"
        android:layout_marginLeft="55dp" android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/btn_vol_up"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:tag="@string/tag_volup"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/btn_vol_down"
        android:tag="@string/tag_voldwn"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lableChannel"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView3"
        android:layout_marginRight="10dp" android:textSize="20sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/btn_chn_up"
        android:tag="@string/tag_chnup"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_alignTop="@+id/btn_vol_up"
        android:layout_alignLeft="@+id/btn_chn_down"
        android:layout_alignStart="@+id/btn_chn_down" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/btn_chn_down"
        android:tag="@string/tag_chndwn"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_below="@+id/btn_chn_up"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Bluetooth Status:"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/btn_chn_down"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_bluetooth_status"
        android:src="@drawable/status_red"
        android:contentDescription="@string/bluetooth_status_on"
        android:layout_alignRight="@+id/btn_vol_down"
        android:layout_alignEnd="@+id/btn_vol_down"
        android:layout_alignLeft="@+id/btn_vol_down"
        android:layout_alignStart="@+id/btn_vol_down"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignTop="@+id/textView2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mute"
        android:id="@+id/btn_mute"
        android:tag="@string/tag_mute"
        android:layout_alignBottom="@+id/btn_chn_up"
        android:layout_toRightOf="@+id/btn_vol_down"
        android:layout_marginLeft="10dp"
        android:background="#a5f3a7"
        android:textSize="12dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/btn_chn_up" />

</RelativeLayout>