<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <ToggleButton
        android:layout_width="78dp"
        android:layout_height="78dp"
        style="@style/toggleButton"
        android:background="@drawable/ic_toggle_bg"
        android:id="@+id/powerButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:tag="@string/tag_power"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lableTV"
        android:id="@+id/checkBoxPower_TV"
        android:layout_alignTop="@+id/powerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:clickable="true"
        android:textColor="@color/colorPrimary"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lableAVR"
        android:id="@+id/checkBoxPower_AVR"
        android:layout_below="@+id/checkBoxPower_TV"
        android:layout_alignLeft="@+id/checkBoxPower_TV"
        android:layout_alignStart="@+id/checkBoxPower_TV"
        android:textColor="@color/colorPrimary"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lableSetup"
        android:id="@+id/checkBoxPower_Setup"
        android:layout_alignTop="@+id/powerButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorPrimary"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="7dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true" />
</RelativeLayout>